{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Avatar",
            "id": "8fe59d0b-c57c-4ff0-9790-f0f2e2dc6b1b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "30c92c4b-bcd4-4c57-9b0f-70c3b8a9ce68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4248f686-a6fb-4df9-baba-a53773d44ca4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "202159c3-9d6c-49df-8f94-59fe72b790d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DestroyBlock",
                    "type": "Button",
                    "id": "62b64ed2-e4c0-4c09-b17d-f89a2383667a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildBlock",
                    "type": "Button",
                    "id": "d65b09bd-1040-49fd-bc23-21a25aadb3e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrapCursor",
                    "type": "Button",
                    "id": "63472b87-7339-4001-ba3a-b5b639c31d2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UntrapCursor",
                    "type": "Button",
                    "id": "ece58f37-845f-49e0-8325-775d2f5b55a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9665a5f9-d5b6-44cd-bab3-3953f99c29fe",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "43a7073b-234b-44ab-b613-4cdb38b611c1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a493313b-b9de-41e1-9acd-ea4826c6fab3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0e7f79d9-a66f-44f3-a0d0-2f8bd284cf01",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cb81ea78-a145-4587-b87a-863ff4776d84",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cce4bddf-e287-44b4-85a1-c21926814bf2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "20bfe06a-b472-4c81-9719-62eead40d75e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d01b327-b9f2-4329-af6d-6aa92398cc8b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DestroyBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dad3763-7a27-4c28-80f2-53c118744265",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6121ed1-932e-4961-a257-f00cb460492b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrapCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a652bc01-d943-4ff2-b34a-ffa7b4ff1279",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UntrapCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0bc783c-ac17-43e5-a46c-5f03dd418f20",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UntrapCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "01410be0-8eb1-4d72-9c95-d96d872c5f08",
            "actions": [
                {
                    "name": "SelectHotKey1",
                    "type": "Button",
                    "id": "7ee625f9-53fb-479d-8e7c-e57aede0d38e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey2",
                    "type": "Button",
                    "id": "7ba48fc5-a6af-4adf-a161-66bae49a8717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey3",
                    "type": "Button",
                    "id": "e1894401-5b6a-46d9-88df-e8fbeca4cb59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey4",
                    "type": "Button",
                    "id": "4e1f64cf-f7f1-4dbf-9f17-9730ef683cc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey5",
                    "type": "Button",
                    "id": "c7311bf2-e4e1-466c-9438-6af6e8f1c288",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey6",
                    "type": "Button",
                    "id": "d33f3fdc-a6ea-484f-9ac7-ed11fbe876ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey7",
                    "type": "Button",
                    "id": "eb52db7c-ffc6-47f2-aaa8-d29293fbbda8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey8",
                    "type": "Button",
                    "id": "e57cfb71-bb35-4782-9456-563becd328fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKey9",
                    "type": "Button",
                    "id": "38ad8f95-db58-4ace-b977-17b570ac5d7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectHotKeyMouse",
                    "type": "Value",
                    "id": "78aa1387-653f-42a1-8f03-eb6e71812c96",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "038c4205-703a-48ec-9797-1397b6807a2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3d6f412-eeef-4c9c-ba68-257d1d1b88c2",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f545d89f-8aa1-43d4-9f28-38146e51b81b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71e3aa66-572d-4aea-8faf-635cbe95ffec",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcdc4f5e-caf1-45f1-a102-261676f8e8a5",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "290802fd-a594-4cbd-b7ed-62ffc12ad132",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48e65cf1-0900-4ce1-8e76-7e82c7163f8d",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e27685a-ac52-44d4-89f4-a5a9078b6f1f",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03baaf84-8d30-4a45-986b-c285d7495a72",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKeyMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "215ec3a0-b6c6-49c1-867a-1e89f8c51e12",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55968eaa-4cae-4d76-b4ed-d760f1f95d80",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHotKey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a026dbee-529d-4870-94db-ec3702b81862",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}